# Labyrintin-Ratkoja

./: .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti10.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7.md
src/: index.py  maze_bfs.py
src/maze/: maze-100x100.csv  maze-10x10.csv  maze-200x200.csv  maze-20x20.csv  maze-400x400.csv  maze-5x5.csv  maze_bfs.py  maze_dead_end_filling.py  maze_wallfollower.py  mazesolver.py
src/tests/: maze_bfs_test.py  maze_dead-end_filling_test.py  maze_wallfollower_test.py  mazesolver_test.py
