[tool.poetry]
name = "tiralabra-markus"
version = "0.1.0"
description = ""
authors = ["Sippee <sippegaming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyamaze = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
