[tool.poetry]
name = "tiralabra-markus"
version = "0.1.0"
description = ""
authors = ["Sippee <sippegaming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyamaze = "^1.0.1"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
